Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36225

opening QMessageBox from inside a QMacNativeWidget results in a deadlock

    XMLWordPrintable

Details

    • macOS

    Description

      attached project is a modification of the qmacnativewidget example, embedding a qquickview inside cocoa window.
      when clicking the button, it should open a QMessageBox. however clicking the button, the message box does not show up, and afterwards the button does not react to mouse events anymore

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sorvig Morten Sørvig
            timblechmann tim blechmann
            Veli-Pekka Heinonen Veli-Pekka Heinonen
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:

              Gerrit Reviews

                There are no open Gerrit changes